--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -8,9 +8,12 @@ public_folder: "/images/uploads"
 collections:
   - name: "posts"
     label: "Posts"
-    folder: "src/posts"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    extension: "json"
+    # folder: "src/posts"
+    files:
+      - file: "src/posts/posts.json"
+    # create: true
+    # slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {
           label: "Layout",
