--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -8,16 +8,16 @@ public_folder: "/images/uploads"
 collections:
   - name: "posts"
     label: "Posts"
-    folder: "_site/posts"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {
-          label: "Layout",
-          name: "layout",
-          widget: "hidden",
-          default: "layouts/post.html",
-        }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Post Body", name: "body", widget: "markdown" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
+    - file: "src/posts/posts.json"
+      label: "Posts"
+      name: "posts"
+      widget: "list"
+      fields:
+        - {
+            label: "Layout",
+            name: "layout",
+            widget: "hidden",
+            default: "layouts/post.html",
+          }
+        - { label: "Title", name: "title", widget: "string" }
+        - { label: "Featured Image", name: "featuredImage", widget: "image" }
