--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -18,6 +18,6 @@ collections:
           widget: "hidden",
           default: "layouts/post.html",
         }
-      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Title", name: "title", widget: "stringas" }
       - { label: "Post Body", name: "body", widget: "markdown" }
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
