--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -9,6 +9,7 @@ collections:
   - name: "posts"
     label: "Posts"
     folder: "src/posts"
+    extension: 'json'
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
