--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -22,3 +22,12 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Post Body", name: "body", widget: "markdown" }
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
+  - name: "pposts"
+    label: "PPosts"
+    folder: "src/temp"
+    extension: 'json'
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Featured Image", name: "featuredImage", widget: "image" }
