--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -9,7 +9,7 @@ collections:
   - name: "posts"
     label: "Posts"
     folder: "src/posts"
-    extension: 'html'
+    extension: "html"
     create: true
     slug: "{{slug}}"
     fields:
@@ -24,10 +24,12 @@ collections:
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
   - name: "pposts"
     label: "PPosts"
-    folder: "src/temp"
-    extension: 'json'
-    create: true
-    slug: "{{slug}}"
+    files: "src/posts/posts.json"
+    extension: "json"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
+      - { label: "Posts", name: "posts", widget: "lists", 
+          fields: {
+            - { label: "Title", name: "title", widget: "string" }
+            - { label: "Featured Image", name: "featuredImage", widget: "image" }
+      }}
+     
