--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -22,15 +22,15 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Post Body", name: "body", widget: "markdown" }
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
-  - name: "PostList"
-    label: "Posts"
+  - name: "pposts"
+    label: "PPosts"
     files:
-      - label: "posts"
-        name: "posts"
+      - label: "pposts"
+        name: "ppposts"
         file: "src/posts/posts.json"
         fields:
           - label: "Post List"
-            name: "posts"
+            name: "ppposts"
             widget: "list"
             fields:
               - { label: "Title", name: "title", widget: "string" }
